--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@
 }
 
 .app-content {
-  flex: 1 1 auto; /* ocupa o espaço entre header e footer */
+  flex: 1 1 auto;
   width: 100%;
   display: block;
 }
