--- a/src/app/components/doc-summary-chat/doc-summary-chat.component.html
+++ b/src/app/components/doc-summary-chat/doc-summary-chat.component.html
@@ -1,32 +1,29 @@
 <div class="page-container">
   <h1 class="main-title">Resumo e Análise do Documento</h1>
-
-  <!-- SUMMARY-->
   <section class="summary">
-    <!-- Estado de Carregamento -->
-    <div *ngIf="isSummaryLoading" class="summary-loading">
+    @if (isSummaryLoading) {
+    <div class="summary-loading">
       Carregando resumo...
     </div>
-
-    <!-- Estado de Erro -->
-    <div *ngIf="summaryError" class="summary-error">
+    } @else if (summaryError) {
+    <div class="summary-error">
       <p>{{ summaryError }}</p>
     </div>
+    } @else {
+    <div class="summary-header">
+      <h2>Resumo gerado por IA</h2>
 
-    <!-- Estado de Sucesso -->
-    <div *ngIf="!isSummaryLoading && !summaryError">
-      <div class="summary-header">
-        <h2>Resumo gerado por IA</h2>
-        <button *ngIf="isSummaryOverflowing" (click)="openSummaryModal()" class="see-more-button">
-          Ver mais
-        </button>
-      </div>
-      <p #summaryParagraph>{{ summaryText }}</p>
+      @if (isSummaryOverflowing) {
+      <button (click)="openSummaryModal()" class="see-more-button">
+        Ver mais
+      </button>
+      }
     </div>
+    <p #summaryParagraph>{{ summaryText }}</p>
+    }
   </section>
 
-  <!-- CHAT-->
-  <section class="chat-card" [ngClass]="{'fullscreen': isChatFullscreen}">
+  <section class="chat-card" [ngClass]="{ 'fullscreen': isChatFullscreen }">
     <div class="chat-header">
       <h3>Pergunte sobre o Documento</h3>
       <button (click)="toggleChatFullscreen()" class="fullscreen-button" title="Alternar tela cheia">
@@ -35,30 +32,35 @@
     </div>
 
     <div class="chat-messages" #messagesContainer>
-      <div *ngFor="let message of messages" class="message-wrapper"
-        [ngClass]="message.sender === 'Você' ? 'user' : 'ia'">
-        <ng-container *ngIf="message.sender === 'IA'">
-          <div class="message-container">
-            <div class="sender">{{ message.sender }}</div>
-            <div class="message">
-              <div class="text">{{ message.text }}</div>
-              <div *ngIf="message.citation" class="citation">
-                <strong>Citações:</strong>
-                <p>"{{ message.citation }}"</p>
-              </div>
+      @for (message of messages; track message) {
+      <div class="message-wrapper" [ngClass]="message.sender === 'Você' ? 'user' : 'ia'">
+        @if (message.sender === 'IA') {
+        <div class="message-container">
+          <div class="sender">{{ message.sender }}</div>
+          <div class="message">
+            <div class="text">{{ message.text }}</div>
+
+            @if (message.citation) {
+            <div class="citation">
+              <strong>Citações:</strong>
+              <p>"{{ message.citation }}"</p>
             </div>
+            }
           </div>
-        </ng-container>
-        <ng-container *ngIf="message.sender === 'Você'">
-          <div class="message-container">
-            <div class="sender">{{ message.sender }}</div>
-            <div class="message">
-              <div class="text">{{ message.text }}</div>
-            </div>
+        </div>
+        } @else {
+        <div class="message-container">
+          <div class="sender">{{ message.sender }}</div>
+          <div class="message">
+            <div class="text">{{ message.text }}</div>
           </div>
-        </ng-container>
+        </div>
+        }
       </div>
-      <div *ngIf="isLoading" class="message-wrapper ia">
+      }
+
+      @if (isLoading) {
+      <div class="message-wrapper ia">
         <div class="message-container">
           <div class="sender">IA</div>
           <div class="message">
@@ -68,7 +70,9 @@
           </div>
         </div>
       </div>
+      }
     </div>
+
     <div class="chat-input">
       <form (ngSubmit)="sendMessage()">
         <input type="text" [(ngModel)]="newMessage" name="newMessage" placeholder="Digite sua pergunta aqui..."
@@ -81,11 +85,14 @@
   </section>
 </div>
 
-<!-- MODAL PARA O RESUMO COMPLETO -->
-<div *ngIf="showFullSummaryModal" class="modal-overlay" (click)="closeSummaryModal()">
+@if (showFullSummaryModal) {
+<div class="modal-overlay" (click)="closeSummaryModal()">
   <div class="modal-content" (click)="$event.stopPropagation()">
-    <button class="modal-close-button" (click)="closeSummaryModal()">&times;</button>
+    <button class="modal-close-button" (click)="closeSummaryModal()">
+      &times;
+    </button>
     <h2>Resumo Completo</h2>
     <p>{{ summaryText }}</p>
   </div>
 </div>
+}
