--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-header style="height: var(--app-header-height)"></app-header>
+<app-header></app-header>
 
 <main class="app-content">
   <router-outlet></router-outlet>
 </main>
 
-<app-footer style="height: var(--app-footer-height)"></app-footer>
+<app-footer></app-footer>
