refactor: update theme toggle button to use computed property for dark mode detection; remove unused OnDestroy lifecycle hook

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,8 +15,8 @@
         <mat-icon>menu</mat-icon>
       </button>
 
-        <button class="theme-toggle" (click)="toggleTheme()" [attr.aria-label]="isDark ? 'Ativar modo claro' : 'Ativar modo escuro'">
-      <i class="fas" [ngClass]="isDark ? 'fa-sun' : 'fa-moon'"></i>
+        <button class="theme-toggle" (click)="toggleTheme()" [attr.aria-label]="isDark() ? 'Ativar modo claro' : 'Ativar modo escuro'">
+      <i class="fas" [ngClass]="isDark() ? 'fa-sun' : 'fa-moon'"></i>
     </button>
     </div>
 </header>
