adiciona model DocumentUploadResponse e zip

--- a/src/app/components/upload-document/upload-document.component.html
+++ b/src/app/components/upload-document/upload-document.component.html
@@ -16,7 +16,7 @@
         type="file"
         id="fileInput"
         (change)="onFileSelected($event)"
-        accept=".pdf,.docx,.png,.jpg,.jpeg,.txt"
+        accept=".pdf,.docx,.png,.jpg,.jpeg,.txt,.zip"
         hidden
       />
 
@@ -29,7 +29,7 @@
     </div>
 
     <p class="support-text">
-      Suporta PDF, DOCX, TXT
+      Suporta PDF, DOCX, TXT, JPG, JPEG, PNG e ZIP
     </p>
   }
 
