--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="main-header">
+<header class="main-header" [class.menu-open]="isMenuOpen">
   <div class="header-container">
     <a routerLink="/" class="logo">
       <img src="assets/logo-LlMontreal.svg" alt="LlMontreal logo" class="logo-icon" />
