refactor: implement file type pipe for document type display; update upload component to streamline file type validation and improve error handling

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -66,7 +66,7 @@
                   <span class="file-name">{{ document.name }}</span>
                 </td>
 
-                <td class="table-td">{{ document.type }}</td>
+                <td class="table-td">{{ document.type | fileType }}</td>
                 <td class="table-td">{{ document.uploadDate | date: 'dd/MM/yyyy HH:mm' }}</td>
 
                 <td class="table-td">
